# bevy_tarot

./: .gitignore  Cargo.toml  README.md
crates/bevy_tarot_chariot/: Cargo.toml  README.md
crates/bevy_tarot_chariot/src/: lib.rs
crates/bevy_tarot_death/: Cargo.toml
crates/bevy_tarot_devil/: Cargo.toml
crates/bevy_tarot_emperor/: Cargo.toml
crates/bevy_tarot_empress/: Cargo.toml
crates/bevy_tarot_fool/: Cargo.toml
crates/bevy_tarot_hanged_man/: Cargo.toml
crates/bevy_tarot_hermit/: Cargo.toml
crates/bevy_tarot_hermit/src/: error.rs  lib.rs  math.rs
crates/bevy_tarot_hierophant/: Cargo.toml
crates/bevy_tarot_high_priestess/: Cargo.toml
crates/bevy_tarot_judgement/: Cargo.toml
crates/bevy_tarot_justice/: Cargo.toml
crates/bevy_tarot_lovers/: Cargo.toml
crates/bevy_tarot_magician/: Cargo.toml
crates/bevy_tarot_magician/src/: animation.rs  lib.rs  sprite.rs
crates/bevy_tarot_moon/: Cargo.toml
crates/bevy_tarot_star/: Cargo.toml
crates/bevy_tarot_strength/: Cargo.toml
crates/bevy_tarot_sun/: Cargo.toml
crates/bevy_tarot_temperance/: Cargo.toml
crates/bevy_tarot_temperance/src/: input.rs  level_edit.rs  lib.rs  sheet_edit.rs  state.rs  ui.rs
crates/bevy_tarot_temperance/src/level_editor/: mod.rs
crates/bevy_tarot_temperance/temperance_editor/: Cargo.toml
crates/bevy_tarot_temperance/temperance_editor/src/: main.rs
crates/bevy_tarot_tower/: Cargo.toml
crates/bevy_tarot_wheel_of_fortune/: Cargo.toml
crates/bevy_tarot_wheel_of_fortune/src/: lib.rs
crates/bevy_tarot_world/: Cargo.toml
crates/bevy_tarot_world/src/: lib.rs
crates/bevy_tarot_world/src/level/: builder.rs  mod.rs
src/: lib.rs
