[package]
name = "bevy_tarot_chariot"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = {  version = "0.14", features = ["serialize"] }
bevy_input = {  version = "0.14", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
smallvec = {  version = "1.13", features = ["serde"]}