[package]
name = "bevy_tarot_chariot"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jillpls/bevy_tarot"
readme = "README.md"
description = "Input handling utilities for bevy applications"

[dependencies]
bevy_ecs = {  version = "0.14", features = ["serialize"] }
bevy_input = {  version = "0.14", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
smallvec = {  version = "1.13", features = ["serde"]}
cfg-if = "1.0.0"

[features]
default = [ "4buttons" ]
4buttons = []
2buttons = []
1button = []
