[package]
name = "bevy_tarot_magician"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_tarot_hermit = { path = "../bevy_tarot_hermit" }
thiserror = "1.0"
serde = "1.0"
ron = "0.8"
bevy_ecs = {  version = "0.14", features = ["serialize"] }
bevy_app = "0.14"
bevy_asset = "0.14"
bevy_render = "0.14"
bevy_log = "0.14"
bevy_transform = "0.14"
bevy_sprite = "0.14"
bevy_reflect = "0.14"
bevy_math = "0.14"
