[package]
name = "bevy_tarot_temperance"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_tarot_world = { path = "../bevy_tarot_world" }
bevy_tarot_hermit = { path = "../bevy_tarot_hermit" }
bevy_tarot_chariot = { path = "../bevy_tarot_chariot" }
bevy_egui = "0.28"
avian2d = { version = "0.1", features = ["serialize"] }
bevy_app = "0.14"
bevy_state = "0.14"
bevy_ecs = "0.14"
bevy_window = "0.14"
bevy_core_pipeline = "0.14"
bevy_transform = "0.14"
bevy_color = "0.14"
bevy_math = "0.14"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
